--- a/portafolio.html
+++ b/portafolio.html
@@ -3,11 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Portafolio</title>
   </head>
   <body>
     <header>
-      
+      Header
     </header>
+    <main>
+      <h1>Portafolio</h1>
+    </main>
+    <footer>
+      Footer
+    </footer>
   </body>
 </html>
